# Simple_Transform_Widget

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  modernTransformRepresentation.cpp  modernTransformRepresentation.hpp  movableAxesRepresentation.cpp  movableAxesRepresentation.hpp  movableAxesWidget.cpp  movableAxesWidget.hpp  myLineRepresentation.cpp  myLineRepresentation.h  read.md  simpleTransformRepresentation.cpp  simpleTransformRepresentation.hpp  transformRepresentation.cpp  transformRepresentation.hpp  transformWidget.cpp  transformWidget.hpp
reference/: vtkLineWidget2.cxx
